--- a/code/index.html
+++ b/code/index.html
@@ -9,20 +9,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="p-0 m-0">
+<body class="p-0 m-0 bg-[#FFFFFF]">
 
 
     <section class="backdrop-blur-3xl fixed top-0 w-full z-50">
         <nav>
-            <div class="navbar  flex justify-evenly  bg-[#F9F7F3] mt-2">
+            <div class="navbar flex-col gap-5 lg:flex-row lg:gap-0 justify-evenly bg-[#F9F7F3] mt-2 ">
                 <div class="">
-                    <a  class="btn btn-ghost text-xl w-[150px] h-[50px] rounde-[10px] bg-[#B4F461]" id="call-blog">Blog</a>
+                    <a class="btn btn-ghost text-xl  w-[150px] h-[50px] rounde-[10px] bg-[#B4F461]"
+                        id="call-blog">Blog</a>
                 </div>
 
                 <div class="flex gap-3 items-center w-60">
-                    <img src="../assets/logo.png" alt="Logo picture">
+                    <img class="" src="../assets/logo.png" alt="Logo picture">
 
-                    <h3 class="font-bold">Donanate Bangladesh</h3>
+                    <h3 class="mt-6 text-[16px] font-bold">Donanate Bangladesh</h3>
                 </div>
 
                 <div tabindex="0" role="button" class=" flex-row">
@@ -30,137 +31,174 @@
                         <img src="../assets/coin.png" alt="Coin" class="w-[20px] h[20px] mr-2">
                     </div>
                     <!-- <div><button class="font-bold" id="current-balance-btn">5000</button></div> -->
-                    <h1 class="font-bold text-xl" id="current-balance-btn">5000</h1><span class="ml-1 font-bold text-xl">BDT</span>
+                    <h1 class="font-bold text-xl" id="current-balance-btn">5000</h1><span
+                        class="ml-1 font-bold text-xl">BDT</span>
 
                 </div>
 
 
             </div>
         </nav>
-        <div class="flex justify-center gap-5 mt-[80px] mb-5">
-            <button class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold" id="donate-btn">Donation</button>
+        <div class="flex justify-center gap-5 mt-[80px] lg:mb-5">
+            <button class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold"
+                id="donate-btn">Donation</button>
             <button
-                class="btn btn-active  bg-[#FFFFFF] border border-solid border-[rgba(17, 17, 17, 0.3);] text-[#696868]" id="history-btn">History</button>
+                class="btn btn-active  bg-[#FFFFFF] border border-solid border-[rgba(17, 17, 17, 0.3);] text-[#696868]"
+                id="history-btn">History</button>
         </div>
     </section>
 
-    <main class="bg-white">
-        <div class="mt-48 -z-30 hidden" id="hidden-items">
+    <main class="bg-white overflow-hidden ">
+<!-- Modal start -->
+        <div class="absolute top-[50%] left-[50%] hidden z-50" id="call-modal">
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="my_modal_1" class="modal">
+                <div class="modal-box text-center">
+                    <h3 class="text-3xl font-bold">Congrates!</h3>
+                    <img class="text-center mx-auto mt-4" src="../assets/coin.png" alt="">
+                    <p class="py-4">You have donated for mankind.</p>
+                    <p class="text-2xl font-bold">Suceessfully</p>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </div>
 
-        
-        <!-- Card-1-starts -->
-        <div class="card-container flex justify-center p-5 ">
-            <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
-                <div class="hero-content flex-col lg:flex-row gap-4">
-                    <img src="../assets/noakhali.png" class="max-w-sm rounded-lg shadow-2xl w-[530px] h-[350px]" />
-                    <div class="grid-cols-1 lg:w-[50%]">
-                        <div class="flex gap-2">
-                            <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
-                            <h1 class="font-bold text-md" id="self-card1-btn">000</h1><span class="font-bold text-md">BDT</span>
+<!-- Modal ends -->
+
+        <div class="mt-48 -z-30 hidden " id="hidden-items">
+
+
+            <!-- Card-1-starts -->
+            <div class="card-container flex justify-center top-[20%] lg:p-5 ">
+                <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
+                    <div class="hero-content flex-col lg:flex-row gap-4">
+                        <img src="../assets/noakhali.png" class="max-w-sm rounded-lg shadow-2xl w-[500px] lg:w-[530px] h-[350px]" />
+                        <div class="grid-cols-1 lg:w-[50%]">
+                            <div class="flex gap-2">
+                                <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
+                                <h1 class="font-bold text-md" id="self-card1-btn">000</h1><span
+                                    class="font-bold text-md">BDT</span>
+                            </div>
+
+                            <h1 class="text-3xl font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
+                            <p class="py-5">
+                                The recent floods in Noakhali have caused significant damage to homes infrastructure.
+                                Your
+                                donation will help provide essential supplies and to those affected by this disaster.
+                                Every
+                                contribution, big or small, makes difference. Please join us in supporting the relief
+                                efforts and making a positive impact on the lives of those in need.
+                            </p>
+                            <div>
+                                <input type="number" placeholder="Write Donation Amount"
+                                    class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card1-input">
+                            </div>
+
+                            <button
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none hover:bg-gray-300"  
+                                id="donate-now-btn1">Donate
+                                Now</button>
                         </div>
-
-                        <h1 class="text-3xl font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
-                        <p class="py-5">
-                            The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
-                            donation will help provide essential supplies and to those affected by this disaster. Every
-                            contribution, big or small, makes difference. Please join us in supporting the relief
-                            efforts and making a positive impact on the lives of those in need.
-                        </p>
-                        <div>
-                            <input type="text" placeholder="Write Donation Amount"
-                                class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card1-input">
-                        </div>
-
-                        <button
-                            class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none" id="donate-now-btn1">Donate
-                            Now</button>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Card-1-Ends -->
-        <!-- Card-2-starts -->
-        <div class="card-container flex justify-center p-5 ">
-            <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
-                <div class="hero-content flex-col lg:flex-row gap-4">
-                    <img src="../assets/noakhali.png" class="max-w-sm rounded-lg shadow-2xl w-[530px] h-[350px]" />
-                    <div class="grid-cols-1 lg:w-[50%]">
-                        <div class="flex gap-2">
-                            <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
-                            <h1 class="font-bold text-md" id="self-card2-btn">000</h1><span class="font-bold text-md">BDT</span>
-                        </div>
+            <!-- Card-1-Ends -->
+            <!-- Card-2-starts -->
+            <div class="card-container flex justify-center lg:p-5 ">
+                <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
+                    <div class="hero-content flex-col lg:flex-row gap-4">
+                        <img src="../assets/noakhali.png" class="max-w-sm rounded-lg shadow-2xl w-[530px] h-[350px]" />
+                        <div class="grid-cols-1 lg:w-[50%]">
+                            <div class="flex gap-2">
+                                <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
+                                <h1 class="font-bold text-md" id="self-card2-btn">000</h1><span
+                                    class="font-bold text-md">BDT</span>
+                            </div>
 
-                        <h1 class="text-3xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h1>
-                        <p class="py-5">
-                            The recent floods in Feni have devastated local communities, leading to severe disruption
-                            and loss. Your generous donation will help provide immediate aid, including food, clean
-                            water, and medical supplies, to those affected by this calamity. Together, we can offer
-                            crucial support and help rebuild lives in the aftermath of this disaster. Every contribution
-                            counts towards making a real difference. Please consider donating today to assist those in
-                            urgent need.
-                        </p>
-                        <div>
-                            <input type="text" placeholder="Write Donation Amount"
-                                class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5"
-                                id="card2-input">
-                        </div>
+                            <h1 class="text-3xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h1>
+                            <p class="py-5">
+                                The recent floods in Feni have devastated local communities, leading to severe
+                                disruption
+                                and loss. Your generous donation will help provide immediate aid, including food, clean
+                                water, and medical supplies, to those affected by this calamity. Together, we can offer
+                                crucial support and help rebuild lives in the aftermath of this disaster. Every
+                                contribution
+                                counts towards making a real difference. Please consider donating today to assist those
+                                in
+                                urgent need.
+                            </p>
+                            <div>
+                                <input type="number" placeholder="Write Donation Amount"
+                                    class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card2-input">
+                            </div>
 
-                        <button
-                            class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none" id="donate-now-btn2">Donate
-                            Now</button>
+                            <button
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300" 
+                                id="donate-now-btn2">Donate
+                                Now</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Card-2-Ends -->
+            <!-- Card-2-Ends -->
 
-        <!-- Card-3-starts -->
-        <div class="card-container flex justify-center p-5 ">
-            <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
-                <div class="hero-content flex-col lg:flex-row gap-4">
-                    <img src="../assets/quota-protest.png" class="max-w-sm rounded-lg shadow-2xl w-[530px] h-[350px]" />
-                    <div class="grid-cols-1 lg:w-[50%]">
-                        <div class="flex gap-2">
-                            <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
-                            <h1 class="font-bold text-md" id="self-card3-btn">000</h1><span class="font-bold text-md">BDT</span>
+            <!-- Card-3-starts -->
+            <div class="card-container flex justify-center  lg:p-5 ">
+                <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
+                    <div class="hero-content flex-col lg:flex-row gap-4">
+                        <img src="../assets/quota-protest.png"
+                            class="max-w-sm rounded-lg shadow-2xl w-[530px] h-[350px]" />
+                        <div class="grid-cols-1 lg:w-[50%]">
+                            <div class="flex gap-2">
+                                <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
+                                <h1 class="font-bold text-md" id="self-card3-btn">000</h1><span
+                                    class="font-bold text-md">BDT</span>
+                            </div>
+
+                            <h1 class="text-3xl font-bold">Aid for Injured in the Quota Movement</h1>
+                            <p class="py-5">
+                                The recent Quota movement has resulted in numerous injuries and significant hardship for
+                                many individuals. Your support is crucial in providing medical assistance,
+                                rehabilitation,
+                                and necessary supplies to those affected. By contributing, you help ensure that injured
+                                individuals receive the care and support they need during this challenging time. Every
+                                donation plays a vital role in alleviating their suffering and aiding in their recovery.
+                                Please consider making a donation to support these brave individuals in their time of
+                                need.
+                            </p>
+                            <div>
+                                <input type="number" placeholder="Write Donation Amount"
+                                    class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card3-input">
+                            </div>
+
+                            <button
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300" 
+                                id="donate-now-btn3">Donate
+                                Now</button>
                         </div>
-
-                        <h1 class="text-3xl font-bold">Aid for Injured in the Quota Movement</h1>
-                        <p class="py-5">
-                            The recent Quota movement has resulted in numerous injuries and significant hardship for
-                            many individuals. Your support is crucial in providing medical assistance, rehabilitation,
-                            and necessary supplies to those affected. By contributing, you help ensure that injured
-                            individuals receive the care and support they need during this challenging time. Every
-                            donation plays a vital role in alleviating their suffering and aiding in their recovery.
-                            Please consider making a donation to support these brave individuals in their time of need.
-                        </p>
-                        <div>
-                            <input type="text" placeholder="Write Donation Amount"
-                                class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card3-input">
-                        </div>
-
-                        <button
-                            class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none" id="donate-now-btn3">Donate
-                            Now</button>
                     </div>
                 </div>
             </div>
+            <!-- Card-3-Ends -->
         </div>
-        <!-- Card-3-Ends -->
-    </div>
 
-    <!-- Histoy section -->
-     <div class="history-container flex justify-center " >
-     <div class="text-black text-3xl absolute top-[45%] w-[75%] h-[100px] hidden" id="history-container">
-        <h1>History section</h1>
+        <!-- Histoy section -->
+        <div class="history-container flex justify-center bg-purple-600 w-full h-auto">
+            <div class="text-black text-xl absolute top-[45%] w-[75%] h-[100px] hidden  text-center"
+                id="history-container">
 
-     </div>
-    </div>
+            </div>
+        </div>
     </main>
     <footer class="bg-[#F9F7F3] w-full h-[100px]">
 
     </footer>
-   <script src="blog.js"></script>
+    <script src="blog.js"></script>
     <script src="feature.js"></script>
     <script src="utilities.js"></script>
 </body>
