--- a/code/index.html
+++ b/code/index.html
@@ -39,17 +39,17 @@
 
             </div>
         </nav>
-        <div class="flex justify-center gap-5 mt-[80px] lg:mb-5">
+        <div class="flex justify-center gap-5 mt-[40px] lg:mb-5">
             <button class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold"
                 id="donate-btn">Donation</button>
             <button
-                class="btn btn-active  bg-[#FFFFFF] border border-solid border-[rgba(17, 17, 17, 0.3);] text-[#696868]"
+                class="btn btn-active  border border-solid border-[rgba(17, 17, 17, 0.3)] text-[#696868]"
                 id="history-btn">History</button>
         </div>
     </section>
 
     <main class="bg-white overflow-hidden ">
-<!-- Modal start -->
+        <!-- Modal start -->
         <div class="absolute top-[50%] left-[50%] hidden z-50" id="call-modal">
             <!-- Open the modal using ID.showModal() method -->
             <dialog id="my_modal_1" class="modal">
@@ -68,7 +68,7 @@
             </dialog>
         </div>
 
-<!-- Modal ends -->
+        <!-- Modal ends -->
 
         <div class="mt-48 -z-30 hidden " id="hidden-items">
 
@@ -77,7 +77,8 @@
             <div class="card-container flex justify-center top-[20%] lg:p-5 ">
                 <div class="hero   w-[100%] h-auto lg:w-[70%] lg:h-[450px] rounded-xl shadow-md ">
                     <div class="hero-content flex-col lg:flex-row gap-4">
-                        <img src="../assets/noakhali.png" class="max-w-sm rounded-lg shadow-2xl w-[500px] lg:w-[530px] h-[350px]" />
+                        <img src="../assets/noakhali.png"
+                            class="max-w-sm rounded-lg shadow-2xl w-[500px] lg:w-[530px] h-[350px]" />
                         <div class="grid-cols-1 lg:w-[50%]">
                             <div class="flex gap-2">
                                 <img src="../assets/coin.png" alt="" class="w-[20px] h-[20px]">
@@ -95,12 +96,12 @@
                                 efforts and making a positive impact on the lives of those in need.
                             </p>
                             <div>
-                                <input type="number" placeholder="Write Donation Amount"
+                                <input type="text" placeholder="Write Donation Amount"
                                     class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card1-input">
                             </div>
 
                             <button
-                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none hover:bg-gray-300"  
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none hover:bg-gray-300"
                                 id="donate-now-btn1">Donate
                                 Now</button>
                         </div>
@@ -133,12 +134,12 @@
                                 urgent need.
                             </p>
                             <div>
-                                <input type="number" placeholder="Write Donation Amount"
+                                <input type="text" placeholder="Write Donation Amount"
                                     class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card2-input">
                             </div>
 
                             <button
-                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300" 
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300"
                                 id="donate-now-btn2">Donate
                                 Now</button>
                         </div>
@@ -172,12 +173,12 @@
                                 need.
                             </p>
                             <div>
-                                <input type="number" placeholder="Write Donation Amount"
+                                <input type="text" placeholder="Write Donation Amount"
                                     class="#B4F461 w-[100%] h-[60px] mb-5 shadow-md rounded-md p-5" id="card3-input">
                             </div>
 
                             <button
-                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300" 
+                                class="btn btn-primary w-[100%] bg-[#B4F461] font-bold text-[#111111] border-none  hover:bg-gray-300"
                                 id="donate-now-btn3">Donate
                                 Now</button>
                         </div>
