Soved responsive issues

--- a/code/blog.html
+++ b/code/blog.html
@@ -136,7 +136,7 @@
 
         </div>
     </main>
-    <footer class="bg-[#F9F7F3] w-full h-auto">
+    <footer class="bg-[#F9F7F3] w-full h-[100px]">
     </footer>
     <script src="blog.js"></script>
     <script src="utilities.js"></script>
