--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
 
             </div>
         </nav>
-        <div class="flex justify-center gap-5 mt-[40px] lg:mb-5">
+        <div class="flex justify-center gap-5 mt-7 lg:mb-7 mb-7">
             <button class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold"
                 id="donate-btn">Donation</button>
             <button
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <main class="bg-white overflow-hidden ">
+    <main class="bg-white overflow-hidden mt-[150px] lg:mt-0">
         <!-- Modal start -->
         <div class="absolute top-[50%] left-[50%] hidden z-50" id="call-modal">
             <!-- Open the modal using ID.showModal() method -->
