Fully  complete Donate Bangladesh project. Alhamdulillah.

--- a/code/blog.html
+++ b/code/blog.html
@@ -136,8 +136,8 @@
 
         </div>
     </main>
-    <!-- <footer class="bg-[#F9F7F3] w-full h-[100px]">
-    </footer> -->
+    <footer class="bg-[#F9F7F3] w-full">
+    </footer>
     <script src="blog.js"></script>
     <script src="utilities.js"></script>
     <script src="feature.js"></script>
